namespace LottasFleaMarket.Models.Enums {
    public enum Condition {
        Used,
        Bad,
        Refurbished
    }
}